Make the main tag with class=keyboard-keys as flex container

--- a/day_01/public/css/style.css
+++ b/day_01/public/css/style.css
@@ -11,3 +11,10 @@ html {
   font-family: sans-serif;
 }
 
+.keyboard-keys {
+    display: flex;
+    flex: 1;
+    min-height: 10vh;
+    align-items: center;
+    justify-content: center;
+}
