--- a/day_01/public/css/style.css
+++ b/day_01/public/css/style.css
@@ -18,3 +18,23 @@ html {
     align-items: center;
     justify-content: center;
 }
+
+.key {
+    border: 0.4rem solid orange;
+    border-radius: 0.5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem 0.5rem;
+    transition: all 0.07 ease;
+    width: 10rem;
+    text-align: center;
+    color: purple;
+    background: rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 0.5rem black;
+}
+
+kbd {
+    display: block;
+    border: 1px solid red;
+    font-size: 4rem;
+}
