--- a/day_01/public/css/style.css
+++ b/day_01/public/css/style.css
@@ -14,7 +14,7 @@ html {
 .keyboard-keys {
     display: flex;
     flex: 1;
-    min-height: 10vh;
+    min-height: 100vh;
     align-items: center;
     justify-content: center;
 }
@@ -37,4 +37,11 @@ kbd {
     display: block;
     border: 1px solid red;
     font-size: 4rem;
+}
+
+.sound {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.07rem;
+    color: #ffc600;
 }
