Add functionality to manage the transitionend event for keys

--- a/day_01/public/css/style.css
+++ b/day_01/public/css/style.css
@@ -12,44 +12,43 @@ html {
 }
 
 .keyboard-keys {
-    display: flex;
-    flex: 1;
-    min-height: 100vh;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex: 1;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 
 .key {
-    border: 0.4rem solid orange;
-    border-radius: 0.5rem;
-    margin: 1rem;
-    font-size: 1.5rem;
-    padding: 1rem 0.5rem;
-    transition: all 0.07 ease;
-    width: 10rem;
-    text-align: center;
-    color: purple;
-    background: rgba(0, 0, 0, 0.4);
-    text-shadow: 0 0 0.5rem black;
+  border: 0.4rem solid orange;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  font-size: 1.5rem;
+  padding: 1rem 0.5rem;
+  transition: all 0.07s;
+  width: 10rem;
+  text-align: center;
+  color: purple;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 0.5rem black;
 }
 
 /* The styling for the selected key on keyboard */
 .playing {
-  transform: scale(1.1);
+  transform: scale(1.05);
   border-color: #ffc600;
-  box-shadow: 0 0 10px #ffc600
-
+  box-shadow: 0 0 10px #ffc600;
 }
 
 kbd {
-    display: block;
-    
-    font-size: 4rem;
+  display: block;
+
+  font-size: 4rem;
 }
 
 .sound {
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07rem;
-    color: #ffc600;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.07rem;
+  color: #ffc600;
 }
